updating index.html to modify header and add data science skills. update css.styles accordingly with new image and class for data science skillrow

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Noy Amram - Python Developer</title>
+    <title>Noy Amram - Data Scientist</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
 <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Noy.</h1>
-    <h2>Biotechnology and Data Engineer.</h2>
+    <h2>Data Scientist.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
 </div>
@@ -22,8 +22,9 @@
   <div class="profile">
         <img class="profile-img" src="images/profile_image.png" alt="profile-img">
         <h2>Hello!</h2>
-        <p class="intro">I am a Biotechnology engineer based in Israel.
-            I have passion for researching and analysing data</p>
+        <p class="intro">I am a Data Scientist based in Israel.
+            Graduated of Data Science Program at Israel Tech Challenge.
+            I am proactive solver with passion for researching and analysing data.</p>
   </div>
   <hr>
   <div class="skills">
@@ -32,12 +33,18 @@
         <img class="programming" src="images/programming_image.png" alt="programming-img">
         <h3>Programming</h3>
         <p>I am a python developer with knowledge in Statistical Analysis and Data Science tools.
-          I know how to analyse data and develop predictive models using Machine Learning.</p>
+           Among my technological skills: Git, Linux, Docker, Spark and SQL.</p>
+    </div>
+    <div class="skill-row">
+        <img class="data" src="images/data-science.png" alt="data-science-img">
+        <h3>Data Science topics</h3>
+        <p>I know how to explorer and analyse data, perform data preprocessing and feature engineering.
+           Develop predictive models using Machine Learning (supervised and unsupervised, including DeepLearning).</p>
     </div>
     <div class="skill-row">
         <img class="web" src="images/web_image.png" alt="web_design-img">
         <h3>Web Design</h3>
-        <p>I can design an interactive website with basic knowledge in HTML,CSS and JavaScript.</p>
+        <p>I can design an interactive website with basic knowledge in HTML and CSS.</p>
     </div>
   </div>
   <hr>
@@ -53,7 +60,7 @@
 
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/noy-a-b0a59470">LinkedIn</a>
-  <a class="footer-link" href="https://github.com/NoyAmram/Global_Fishing_Watch_Project">Website</a>
+  <a class="footer-link" href="https://github.com/NoyAmram">GitHub</a>
   <p class="copyright">© 2022 Noy Amram</p>
 </div>
 
