updated profile image and images width

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <div class="middle-container">
   <div class="profile">
-        <img class="profile-img" src="images/profile_image.png" alt="profile-img">
+        <img class="profile-img" src="images/github_pic.png" alt="profile-img">
         <h2>Hello!</h2>
         <p class="intro">I am a Data Scientist based in Israel.
             Graduated of Data Science Program at Israel Tech Challenge.
