minor typo correction

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img class="profile-img" src="images/github_pic.png" alt="profile-img">
         <h2>Hello!</h2>
         <p class="intro">I am a Data Scientist based in Israel.
-            Graduated of Data Science Program at Israel Tech Challenge.
+            Graduate of Data Science Program at Israel Tech Challenge.
             I am proactive solver with passion for researching and analysing data.</p>
   </div>
   <hr>
