--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="skill-row">
         <img class="data" src="images/data-science.png" alt="data-science-img">
         <h3>Data Science topics</h3>
-        <p>I know how to explorer and analyse data, perform data preprocessing and feature engineering.
+        <p>I know how to explore and analyse data, perform data preprocessing and feature engineering.
            Develop predictive models using Machine Learning (supervised and unsupervised, including DeepLearning).</p>
     </div>
     <div class="skill-row">
